<resources>
    <string name="app_name">FreeLibrary</string>
    <string name="search">Books</string>
    <string name="map">Map</string>
    <string name="permission_required_toast">Permission required toast.</string>
    <string name="search_hint">Search address</string>
    <string name="author">Author: </string>
    <string name="availability">Availability: </string>
    <string name="checkin">Check-In</string>
    <string name="checkout">Check-Out</string>
    <string name="library">Library: </string>
    <string name="title">Title: </string>
    <string name="barcode">Code Bar:</string>
    <string name="selectpicture">Please select book picture:</string>
    <string name="fromcamera">from Camera</string>
    <string name="fromfile">from File</string>
    <string name="register">Register new Book</string>
    <string name="booksearch">Search Book</string>
    <string name="unknown">Unknown Book</string>
    <string name="available"> is avalable</string>
    <string name="favoritelibrary">Pick it at </string>
    <string name="name">Name: </string>
    <string name="location">Location: </string>
    <string name="curent">Use current location</string>
    <string name="marker">Use marker</string>
    <string name="librarypicture">Please select library picture: </string>
    <string name="newlibrary">Register new Library</string>
    <string name="addlibrary">Add a library</string>
</resources>