<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newBookView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBook">

    <include
        android:id="@+id/include"
        layout="@layout/bottom_layout_horizontal" />

    <TextView
        android:id="@+id/bookLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/library"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookName" />

    <TextView
        android:id="@+id/codeBarSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/codeLibrary"
        app:layout_constraintTop_toTopOf="@+id/codeLibrary" />

    <TextView
        android:id="@+id/libraryBook2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/bookLibrary"
        app:layout_constraintTop_toTopOf="@+id/bookLibrary" />

    <TextView
        android:id="@+id/bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookName"
        app:layout_constraintStart_toEndOf="@+id/bookName"
        app:layout_constraintTop_toTopOf="@+id/bookName"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/authorLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookLibrary" />

    <TextView
        android:id="@+id/codeLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/barcode"
        app:layout_constraintStart_toStartOf="@+id/authorLibrary"
        app:layout_constraintTop_toBottomOf="@+id/authorLibrary" />

    <EditText
        android:id="@+id/authorBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/authorLibrary"
        app:layout_constraintStart_toEndOf="@+id/authorLibrary"
        app:layout_constraintTop_toTopOf="@+id/authorLibrary"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/photoLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/selectpicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeLibrary" />

    <Button
        android:id="@+id/cameraPhoto"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/fromcamera"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/photoLibrary"
        app:layout_constraintStart_toEndOf="@+id/photoLibrary"
        app:layout_constraintTop_toTopOf="@+id/photoLibrary" />

    <Button
        android:id="@+id/filePhoto"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:text="from File"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/cameraPhoto"
        app:layout_constraintTop_toTopOf="@+id/cameraPhoto" />

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="45dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/filePhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@+id/photoLibrary"
        app:layout_constraintTop_toBottomOf="@+id/photoLibrary" />

</androidx.constraintlayout.widget.ConstraintLayout>